# Fun-With-Pandas

./: README.md  pyproject.toml
bob_ross/: general_info.py  main.py
fibonacci/: main.py
